--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <link data-n-head="ssr" rel="icon" type="image/x-icon" href="/favicon.ico" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>react example</title>
+        <title>react three.js example</title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300%7CSonsie+One" rel="stylesheet" type="text/css">
     </head>
     <body>
